--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -1,7 +1,20 @@
 @import "fonts";
 
+html, body{
+  margin: 0;
+  padding: 0;
+}
+
 body {
   background: #ffff;
   font-family: "Roboto", sans-serif;
   font-weight: 300;
+}
+
+html, body, #root, main{
+  height: 100%;
+}
+
+*{
+  box-sizing: border-box;
 }
